--- a/index.html
+++ b/index.html
@@ -4,9 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,300&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="logo">Header Logo</div>
+        <ul class= "menu-links">
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
+    <div class="hero">
+        <div class="hero-text">
+            <div class="hero-main">This website is awesome</div>
+            <div class="hero-secondary"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem inventore perspiciatis excepturi, nisi sapiente praesentium maiores atque possimus debitis delectus! </div>
+            <button>Sing Up</button>
+        </div>
+
+        <img src="images/pães de mel.jpg" class="image-hero">
+
+    </div>
+
+
+ 
+    <h1>Some randon information</h1>
+       <div class="section">
+        <div class="galery">
+            <img src="/images/pão de mel caramelo salgado.jpg" alt="" class="image">
+            <p class="image-text">this is some subtext under an ilustration or image</p>
+        </div>
+        <div class="galery">
+            <img src="/images/21_09_10_santofavo_15.jpg" alt="" class="image">
+            <p class="image-text">this is some subtext under an ilustration or image</p>
+        </div>
+        <div class="galery">
+            <img src="/images/21_09_10_santofavo_17.jpg" alt="" class="image">
+            <p class="image-text">this is some subtext under an ilustration or image</p>
+        </div>
+        <div class="galery">
+            <img src="/images/bolo chocolate c flor de sal.jpg" alt="" class="image">
+            <p class="image-text">this is some subtext under an ilustration or image</p>
+        </div>
+    </div>
+    <div class="section-quote">
+        <p class="quote-text">This is an inspiring quote, or a testimonial from a custumer. Maybe its just filling up space, or maybe people will actually read it. Who knows? All I know is that it look nice</p>
+        <p class="quote-author">-Thor, God of Thunder</p>
+    </div>
+    <div class="call-to-action">
+        <div class="call-to-action-text">
+            <div class="call-to-action-main"> Call to action! It`s time!</div>
+            <div class="call-to-action-secundary">Sign up for our prouct by clicking that button right over there!</div>
+        </div>
+        <button class="sign-up">Sign up</button>
+    </div>
+     <footer>
+        <p>Copyright C Santo Favo 2023</p>
+     </footer>
 </body>
 </html>
